tests/ifcc-test-output/testfiles-functions-void_error_declaration_param1/gcc-compile.txt
input.c: In function ‘main’:
input.c:5:5: error: too few arguments to function ‘func’
    5 |     func(a);
      |     ^~~~
input.c:1:6: note: declared here
    1 | void func(int a, int b){}
      |      ^~~~

return code: 1
